# nand2tetris

./: .gitignore  Main.py  VMTranslator.py  codewriter.py  vmcodewriter.py  vmparser.py
01/: And.hdl  And16.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Not.hdl  Not16.hdl  Or.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
02/: ALU.hdl  Add16.hdl  FullAdder.hdl
03/a/: Bit.hdl  RAM8.hdl
03/b/: RAM16K.hdl
03/project03/a/: PC.hdl  RAM64.hdl  Register.hdl
03/project03/b/: RAM4K.hdl  RAM512.hdl
04/fill/: Fill.asm  Fill.hack
04/mult/: Mult.hack  mult.asm
05/: CPU.hdl  Computer.hdl  Memory.hdl
06/: .envrc  .python-version  Makefile  main.py  pyproject.toml
06/assets/max/: Max.hack  MaxL.hack
06/assets/pong/: Pong.hack
06/assets/rect/: Rect.hack  RectL.hack
06/hack_assembler/: enums.py  parser.py  symbol_table.py
06/project6/: AUTHORS  Assembler  main.py
06/project6/hack_assembler/: code.py
07/: main.py  vmcodewriter.py  vmparser.py
08/: VMtranslator  main.py  pyproject.toml
08/assets/FunctionCalls/FibonacciElement/: FibonacciElement.asm
08/assets/FunctionCalls/NestedCall/: Sys.asm
08/assets/FunctionCalls/SimpleFunction/: SimpleFunction.asm
08/assets/FunctionCalls/StaticsTest/: StaticsTest.asm
08/assets/ProgramFlow/BasicLoop/: BasicLoop.asm  BasicLoop.out
08/assets/ProgramFlow/FibonacciSeries/: FibonacciSeries.asm
08/vm_translator/: vmcodewriter.py  vmparser.py
10/: Compilation.py  JackTokenizer.py  Main.py
