[tool.poetry]
name = "08"
version = "0.1.0"
description = ""
authors = ["Roy Ben Haroosh <roybh@cisco.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
black = "^24.1.1"
isort = "^5.13.2"
ruff = "^0.1.15"
pyright = "^1.1.349"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
